first index content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,15 @@
     <div class="main flexV">
         <div class="greeting"><%= title %></div>
         <div class="headline">See your financial future.</div>
+        <div class="medBlank"></div>
+        <div class="graphic">
+            <img src="images/dollar_growth.png" alt="Diagram of dollar sign icons doubling twice.">
+        </div>
+        <div class="textHighlight flexV">
+            <p>With the right tools and advice, it's easier than you think to retire comfortably and on-time.</p>
+            <p>Get started with our interactive investment calculator.</p>
+            <a href="/calculator" class="buttons">Start</a>
+        </div>
     </div>    
 
 <% include footer %>
