--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,19 +12,23 @@
     --gray-lt: #EBF5FB;
 }
 
+html {
+    background-color: var(--blue-lt);
+    background: linear-gradient(135deg, var(--aqua-lt), var(--blue-lt));
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100%;
+}
+
 body {
     font-family: "Noto Sans", sans-serif;
-    margin: 0;
 }
 
 .main {
-    background-color: var(--blue-lt);
-    background: linear-gradient(135deg, var(--aqua-lt), var(--blue-lt));
-    z-index: 5;
     width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
+    padding: 2em;
+    max-width: 1200px;
+    margin: auto;
 }
 
 .flexH {
@@ -38,6 +42,29 @@ body {
     align-items: center;
 }
 
+.graphic {
+    height: 200px;
+    width: 200px;
+    margin: 2em;
+}
+
+img {
+    height: 100%;
+    width: auto;
+}
+
+p {
+    margin: .5em 0em;
+}
+
+a {
+    text-decoration: none;
+}
+
+.medBlank {
+    height: 5em;
+}
+
 .greeting {
     color: var(--gray-lt);
     font-size: 8em;
@@ -48,4 +75,29 @@ body {
 .headline {
     color: var(--gray-lt);
     font-size: 2em;
+}
+
+.textHighlight {
+    color: var(--gray-lt);
+    font-size: 1.5em;
+    width: 75%;
+    max-width: 650px;
+    border-left: 2px solid var(--gray-lt);
+    border-right: 2px solid var(--gray-lt);
+    padding: 0em 1em;
+}
+
+.buttons {
+    color: var(--blue-lt);
+    font-size: 1.25em;
+    background-color: var(--gray-lt);
+    border: 4px solid var(--gray-lt);
+    border-radius: .25em;
+    padding: .15em .75em;
+}
+
+.buttons:hover {
+    cursor: pointer;
+    color: var(--gray-lt);
+    background: none;
 }
