--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,10 @@ body {
     font-family: "Noto Sans", sans-serif;
 }
 
+.mast {
+    font-size: .55em;
+}
+
 .main {
     width: 100%;
     padding: 2em;
@@ -91,7 +95,7 @@ a {
     color: var(--blue-lt);
     font-size: 1.25em;
     background-color: var(--gray-lt);
-    border: 4px solid var(--gray-lt);
+    border: 2px solid var(--gray-lt);
     border-radius: .25em;
     padding: .15em .75em;
 }
@@ -100,4 +104,26 @@ a {
     cursor: pointer;
     color: var(--gray-lt);
     background: none;
+}
+
+.interactiveForm {
+    font-size: 1.25em;
+    color: var(--gray-lt);
+    font-family: "Noto Sans", sans-serif;
+    width: 25em;
+    text-align: center;
+}
+
+#calcInputLabel {
+    height: 2.5em;
+}
+
+.interactiveField {
+    font-size: 1.25em;
+    font-family: "Noto Sans", sans-serif;
+    padding: .25em;
+    border-radius: .25em;
+    border: none;
+    width: 15em;
+    margin: 1em;
 }
