--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,3 +13,21 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
+        <div class="nav" id='nav'>
+            <div class="navX">
+                <img src='/images/x.png' id='navXimg'>
+            </div>
+            <nav class="navItems">
+                <a href='/' class='menuLink'>
+                    <div class='navItem' id="navHome">
+                        <span>Home</span>
+                    </div>
+                </a>
+                <a href='/calculator' class='menuLink'>
+                    <div class='navItem' id="navCalculator">
+                        <span>Calculator</span>
+                    </div>
+                </a>
+            </nav>
+        </div>
+        <div class="graycover"></div>
