--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,10 @@
 <% include header %>
 
     <div class="main flexV">
+        <div class="hamburger">
+            <img src="/images/hamburger.png" class="hamburgerButton">
+            <span id="hamburgerText" class="hamburgerButton">&nbspMenu</span>
+        </div>
         <div class="greeting"><%= title %></div>
         <div class="headline">See your financial future.</div>
         <div class="medBlank"></div>
