--- a/views/mastHead.ejs
+++ b/views/mastHead.ejs
@@ -1,4 +1,8 @@
 <div class="mast flexV">
+    <div class="hamburger">
+        <img src="/images/hamburger.png" class="hamburgerButton">
+        <span id="hamburgerText" class="hamburgerButton">&nbspMenu</span>
+    </div>
     <div class="greeting">Miroctus</div>
     <!-- <div class="headline">See your financial future.</div> -->
 </div>
