fixed menu close bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <% include header %>
 
     <div class="main flexV">
+        <div class="graycover"></div>
         <div class="hamburger">
             <img src="/images/hamburger.png" class="hamburgerButton">
             <span id="hamburgerText" class="hamburgerButton">&nbspMenu</span>
