--- a/views/mastHead.ejs
+++ b/views/mastHead.ejs
@@ -1,3 +1,4 @@
+<div class="graycover"></div>
 <div class="mast flexV">
     <div class="hamburger">
         <img src="/images/hamburger.png" class="hamburgerButton">
