Day end clean up

--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -9,6 +9,7 @@
             <input type="text" class="interactiveField" id="calcInput" autocomplete="off">
             <button class="buttons" id="calcInputButton">Next</button>
         </div>
+        <div class="results" id="resultsField"></div>
     </div>
     <script src="/javascripts/calculator.js"></script>
 
