--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -228,6 +228,12 @@ a {
     margin: 1em;
 }
 
+.results {
+    display: none;
+    color: var(--gray-lt);
+    font-size: 2em;
+}
+
 @media only screen and (max-width: 900px) {
     :root {
         --nav-width: 30%;
