adding calculator functionality

--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -11,6 +11,7 @@
         </div>
         <div class="results" id="resultsField"></div>
     </div>
+    <script src="/javascripts/formulas.js"></script>
     <script src="/javascripts/calculator.js"></script>
 
 <% include footer %>
