--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -232,6 +232,7 @@ a {
     display: none;
     color: var(--gray-lt);
     font-size: 2em;
+    text-align: center;
 }
 
 @media only screen and (max-width: 900px) {
