--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             <img src="images/dollar_growth.png" alt="Diagram of dollar sign icons doubling twice.">
         </div>
         <div class="textHighlight flexV">
-            <p>With the right tools and advice, it's easier than you think to retire comfortably and on-time.</p>
+            <p>With the right tools and advice, it's easier than you think to retire comfortably, when you want to.</p>
             <p>Get started with our interactive investment calculator.</p>
             <a href="/calculator" class="buttons">Start</a>
         </div>
