--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -10,8 +10,10 @@
             <button class="buttons" id="calcInputButton">Next</button>
         </div>
         <div class="results" id="resultsField"></div>
+        <div class="breakdown" id="breakdownField"></div>
     </div>
     <script src="/javascripts/formulas.js"></script>
     <script src="/javascripts/calculator.js"></script>
 
 <% include footer %>
+
