scripting for portfolio builder

--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -10,6 +10,7 @@
             <button class="buttons" id="calcInputButton">Next</button>
         </div>
         <div class="results" id="resultsField"></div>
+        <div class="inform sizeUp" id="toAction" style="display: none;"></div>
         <div class="breakdown" id="breakdownField"></div>
     </div>
     <script src="/javascripts/formulas.js"></script>
