--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -165,6 +165,10 @@ a {
     font-size: 1.5em;
 }
 
+.sizeDown {
+    font-size: .75em;
+}
+
 .medBlank {
     height: 5em;
 }
@@ -182,6 +186,13 @@ a {
     width: 100%;
     text-align: center;
     overflow: hidden;
+}
+
+.inform {
+    color: var(--gray-lt);
+    width: 75%;
+    text-align: center;
+    margin: 2em 0em;
 }
 
 .textHighlight {
@@ -257,7 +268,6 @@ a {
 }
 
 ul {
-    font-size: .9em;
     text-align: left;
 }
 
