--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -11,7 +11,7 @@
         </div>
         <div class="results" id="resultsField"></div>
         <div class="inform sizeUp" id="toAction" style="display: none;"></div>
-        <div class="breakdown" id="breakdownField"></div>
+        <div class="breakdown translucentBG" id="breakdownField"></div>
     </div>
     <script src="/javascripts/formulas.js"></script>
     <script src="/javascripts/calculator.js"></script>
