--- a/views/portfoliobuilder.ejs
+++ b/views/portfoliobuilder.ejs
@@ -1,7 +1,13 @@
 <% include header %>
     <div class="main flexV">
         <% include mastHead %>
-        <div class="inform sizeUp" id="userData"><%= userData %></div>
+        <div class="inform flexV">
+            <div class="flexVL translucentBG" id="userProfile"></div>
+            <div class="inform translucentBG">
+                <div class="sizeUp" id="allocationChart"></div>
+                <div id="allocationDetails"></div>
+            </div>
+        </div>
     </div>
     <script src="/javascripts/portfolioBuilder.js"></script>
 
