--- a/views/portfoliobuilder.ejs
+++ b/views/portfoliobuilder.ejs
@@ -4,8 +4,7 @@
         <div class="inform flexV">
             <div class="flexVL translucentBG" id="userProfile"></div>
             <div class="inform translucentBG">
-                <div class="sizeUp" id="allocationChart"></div>
-                <div id="allocationDetails"></div>
+                <div id="allocationChart"></div>
             </div>
         </div>
     </div>
