--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <div class="headline">See your financial future.</div>
         <div class="medBlank"></div>
         <div class="graphic">
-            <img src="images/dollar_growth.png" alt="Diagram of dollar sign icons doubling twice.">
+            <img src="/images/dollar_growth.png" alt="Diagram of dollar sign icons doubling twice.">
         </div>
         <div class="textHighlight flexV">
             <p>With the right tools and advice, it's easier than you think to retire comfortably, when you want to.</p>
