style updates and responsive improvements

--- a/views/mastHead.ejs
+++ b/views/mastHead.ejs
@@ -5,5 +5,6 @@
         <span id="hamburgerText" class="hamburgerButton">&nbspMenu</span>
     </div>
     <div class="greeting">Miroctus</div>
+    <div class="headline"><%= headline %></div>
     <!-- <div class="headline">See your financial future.</div> -->
 </div>
