--- a/views/portfoliobuilder.ejs
+++ b/views/portfoliobuilder.ejs
@@ -1,8 +1,8 @@
 <% include header %>
     <div class="main flexV">
         <% include mastHead %>
-        <div class="inform flexV">
-            <div class="flexVL translucentBG" id="userProfile"></div>
+        <div class="container flexV">
+            <div class="inform flexVL translucentBG" id="userProfile"></div>
             <div class="inform translucentBG">
                 <div id="allocationChart"></div>
             </div>
