--- a/views/portfoliobuilder.ejs
+++ b/views/portfoliobuilder.ejs
@@ -4,7 +4,7 @@
         <div class="container flexV">
             <div class="inform flexVL translucentBG" id="userProfile"></div>
             <div class="inform translucentBG">
-                <div id="allocationChart"></div>
+                <div class="flexV" id="allocationChart"></div>
             </div>
         </div>
     </div>
