initial chart.js implementation

--- a/views/portfoliobuilder.ejs
+++ b/views/portfoliobuilder.ejs
@@ -8,6 +8,7 @@
             </div>
         </div>
     </div>
+    <script src="/javascripts/chartscript.js"></script>
     <script src="/javascripts/portfolioBuilder.js"></script>
 
 <% include footer %>
