--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -310,6 +310,12 @@ ul {
     padding: 0em .25em;
 }
 
+.chart {
+    background-color: var(--gray-lt);
+    border-radius: 1em;
+    padding: 2em;
+}
+
 @media only screen and (max-width: 900px) {
     :root {
         --nav-width: 30%;
