--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Raleway:400,700" rel="stylesheet">
         <link rel='shortcut icon' href='/images/eighth.ico' type='image/x-icon'>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
     </head>
     <body>
         <div class="nav" id='nav'>
