--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -313,7 +313,11 @@ ul {
 .chart {
     background-color: var(--gray-lt);
     border-radius: 1em;
-    padding: 2em;
+    padding: .5em;
+}
+
+.chartContainer {
+    width: 50%;
 }
 
 @media only screen and (max-width: 900px) {
