--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -3,7 +3,9 @@
         <% include mastHead %>
         <div class="medBlank"></div>
         <div class="interactiveForm flexV" id="calcForm">
-            <label for="calcInput" id="calcInputLabel"></label>
+            <div class='flexV' id="calcInputLabelContainer">
+                <label for="calcInput" id="calcInputLabel"></label>
+            </div>
             <input type="text" class="interactiveField" id="calcInput" autocomplete="off">
             <button class="buttons" id="calcInputButton">Next</button>
         </div>
