--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
         <% include mastHead %>
         <div class="medBlank"></div>
         <div class="container flexV">
-            <div class="flexVL translucentBG" id="registrationForm">
+            <div class="flexVL translucentBG formContainer" id="registrationForm">
                 <label for="firstName" class="formLabel">First name:</label>
                 <input type="text" class="formInput" id="firstName" name="firstName">
                 <label for="lastName" class="formLabel">Last name:</label>
@@ -23,6 +23,7 @@
                 <label for="netWorth" class="formLabel">Liquid net worth:</label>
                 <input type="text" class="formInput" id="netWorth" name="netWorth">
                 <button class="buttons" id="createProfileButton">Create profile</button>
+                <div class="messages" id="registerError" style="display: none"></div>
             </div>
         </div>
         <div class="medBlank"></div>
