refining login/outs

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -37,6 +37,9 @@
                     </a>
                 <% } %>
                 <% if (user) { %>
+                    <a href="/profile" class="menuLink">
+                        <div class="navItem" id="navProfile">Profile</div>
+                    </a>
                     <a href='/logout' class='menuLink'>
                         <div class='navItem' id=navLogout>
                             <span>Logout</span>
