--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
         <% include mastHead %>
         <div class="medBlank"></div>
         <div class="container flexV">
-            <div class="flexVL translucentBG formContainer" id="profile">
+            <div class="flexVL translucentBG inform" id="profile">
                 <div class="profileItem">Name: <%= data.firstName %> <%= data.lastName %></div>
                 <div class="profileItem">Email address: <%= data.email %></div>
                 <div class="profileItem">Birth year: <%= data.birthYear %></div>                
