--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -361,14 +361,8 @@ ul {
     background-color: var(--error-bg);
     border: 1px solid var(--error-color);
     border-radius: .25em;
-    padding: .25em;
+    padding: .25em 2em;
     margin: .5em 0em;
-}
-
-.profileItem {
-    color: var(--gray-lt);
-    font-size: 1.25em;
-    padding: .25em;
 }
 
 @media only screen and (max-width: 900px) {
