update profile functionality

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,7 +16,7 @@
                 <div class="profileItem">Risk willingness (1-5): <%= data.riskWilling %></div>
                 <div class="smlBlank"></div>
                 <label for="editProfileButton" class="formLabel">Edit profile details:</label>
-                <button class="buttons" id="editProfileButton">Edit</button>
+                <a href="/profile/edit"><button class="buttons" id="editProfileButton">Edit</button></a>
             </div>
             <div class="inform translucentBG" id="portfolioBar">
                 <div class="chartContainer">
