--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -362,7 +362,7 @@ ul {
     border: 1px solid var(--error-color);
     border-radius: .25em;
     padding: .25em 2em;
-    margin: .5em 0em;
+    margin: 1em 0em;
 }
 
 @media only screen and (max-width: 900px) {
