--- a/views/header.ejs
+++ b/views/header.ejs
@@ -38,7 +38,14 @@
                 <% } %>
                 <% if (user) { %>
                     <a href="/profile" class="menuLink">
-                        <div class="navItem" id="navProfile">Profile</div>
+                        <div class="navItem" id="navProfile">
+                            <span>Profile</span>
+                        </div>
+                    </a>
+                    <a href="/account" class="menuLink">
+                        <div class="navItem" id="navAccount">
+                            <span>Account</span>
+                        </div>
                     </a>
                     <a href='/logout' class='menuLink'>
                         <div class='navItem' id=navLogout>
