improvements for password change/reset

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -4,10 +4,10 @@
         <div class="medBlank"></div>
         <div class="container flexV">
             <div class="flexVL translucentBG formContainer" id="account">
-                <div class="profileItem sizeUp">Name: <%= data.name %></div>
-                <div class="profileItem sizeUp">Email: <%= data.email %></div>
+                <div class="profileItem basic sizeUp">Name: <%= data.name %></div>
+                <div class="profileItem basic sizeUp">Email: <%= data.email %></div>
                 <div class="smlBlank"></div>
-                <div class="profileItem sizeUp">Change password:</div>            
+                <div class="profileItem basic sizeUp">Change password:</div>            
                 <label for="oldPassword" class="formLabel">Old password:</label>
                 <input class="formInput" type="password" name="oldPassword" id="oldPassword">
                 <label for="newPassword" class="formLabel">New password:</label>
