--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,8 @@
                 <input type="password" class="formInput" id="password" name="password">
                 <input type="submit" class="buttons" id="loginButton" value="Sign in">
             </form>
+            <br>
+            <div class="basic sizeDown">Forgot your password? <a href="/account/reset">Click here to reset it</a>.</div>
             <% if (msg != '') { %>
                 <div class="messages" id="registerError"><%= msg %></div>
             <% } %>
